--- a/.github/workflows/cidb.yml
+++ b/.github/workflows/cidb.yml
@@ -14,58 +14,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          
-      - name: Build Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/notification-universe:latest .
+          dotnet-version: 8.0.x
 
-      - name: Push Docker image
-        run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/notification-universe:latest
+      - name: Restore dependencies
+        run: dotnet restore
 
-     
-    # - name: Get latest code
-    #   uses: actions/checkout@v2.3.2
+      - name: Build
+        run: dotnet build --no-restore
 
-    # - name: Use Node.js 18.17.1 LTS
-    #   uses: actions/setup-node@v2
-    #   with:
-    #     node-version: '18.17.1'
-    
-    # - name: Set env variables
-    #   run: node server.js 
-    #   env:
-    #     APP_SETTINGS: ${{ secrets.APP_SETTINGS }}
-      
-    # - name: Install NPM Modules
-    #   run: npm install
+      - name: Publish
+        run: dotnet publish src/Api/Api.csproj -o ./dist --no-restore
 
-    # - name: Build Project
-    #   run: npm run build:prod
-
-    # - name: upload artifact
-    #   uses: actions/upload-artifact@v2
-    #   with:
-        # name: up
-    #    path: ./dist/portfolio/
-
-    # - name: Sync Files
-    #   uses: SamKirkland/FTP-Deploy-Action@2.0.0
-    #   env:
-    #     FTP_SERVER: ${{ secrets.SERVER_FTP_HOST }}
-    #     FTP_USERNAME: ${{ secrets.SERVER_FTP_USERNAME }}
-    #     FTP_PASSWORD: ${{ secrets.SERVER_FTP_PASSWORD }}
-    #     PORT: 22
-    #     METHOD: sftp
-    #     LOCAL_DIR: ./dist/portfolio/
-    #     REMOTE_DIR: ${{ secrets.SERVER_FTP_DIR }}
-    #     ARGS: --verbose
-    
     
 
     
