--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "MailSettings": {
-    "Url": "https://send.api.mailtrap.io/api/send",
-    "Token": "51a84cc688c9ee804217a8b29df7596c",
-    "From": "hello@teguia.me",
+    "Url": "Url",
+    "Token": "Token",
+    "From": "From",
     "RegisterUuid": "EmailSettings_RegisterUuid",
     "ResetPasswordUuid": "EmailSettings_ResetPasswordUuid",
     "NewGiftUuid": "42fc5c59-72a4-48a2-a3bc-b613f3ede778"
