--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
             docker stop notification-universe || true
             docker rm notification-universe || true
             docker run -d \
-              --name notification-universeo \
+              --name notification-universe \
               --network nginx-proxy-manager \
               -p 5000:80 \
               -e MAILSETTINGS__URL=${{ vars.MAILSETTINGS__URL }} \
