--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,9 @@ jobs:
               --name notification-universe \
               --network nginx-proxy-manager \
               -p 5000:8080 \
+              -e MAILSETTINGS__URL=${{ vars.MAILSETTINGS__URL }} \
+              -e MAILSETTINGS__FROM=${{ vars.MAILSETTINGS__FROM }} \
+              -e MAILSETTINGS__TOKEN=${{ secrets.MAILSETTINGS__TOKEN }} \
               ${{ vars.DOCKER_REGISTRY }}/${{ vars.IMAGE_NAME }}:${{ vars.IMAGE_TAG }}
           
           
